--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -171,17 +171,21 @@ new-agent_dmg-x64-a7:
       # brew remove --force --ignore-dependencies --formula wget
       brew remove --force --ignore-dependencies --formula gettext
 
-    - ls -l /usr/local/Cellar/python@3.12 || true
-    - ls -l /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 || true
-    - which python3.12 || true
-    - which python || true
-    - python -c 'print("hell world")' || true
-    - /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 -c 'print("hell world")' || true
-    - export PATH="/usr/local/Cellar/python@3.12/3.12.6/bin:$PATH"
-    - which python || true
+    # - ls -l /usr/local/Cellar/python@3.12 || true
+    # - ls -l /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 || true
+    # - which python3.12 || true
+    # - which python || true
+    # - python -c 'print("hell world")' || true
+    # - /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 -c 'print("hell world")' || true
+    # - export PATH="/usr/local/Cellar/python@3.12/3.12.6/bin:$PATH"
+    # - which python || true
+    # - which python3 || true
+    # - which python3.12 || true
+    # - python -c 'print("hell world")' || true
+    - ls /usr/local/opt/python@3.12.6/libexec/bin || true
+    - export PATH="/usr/local/opt/python@3.12.6/libexec/bin:$PATH"
     - which python3 || true
-    - which python3.12 || true
-    - python -c 'print("hell world")' || true
+    - python3 --help || true
     - exit
 
     - |
