--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -157,6 +157,9 @@ new-agent_dmg-x64-a7:
     - brew install gettext -fv || true
     - brew link --overwrite gettext || true
   script:
+    # TODO: Useful?
+    - which python3 || true
+    - source .venv/bin/activate
     - export RELEASE_VERSION=$RELEASE_VERSION_7
     - echo goroot $GOROOT
     - echo gopath $GOPATH
@@ -174,19 +177,8 @@ new-agent_dmg-x64-a7:
       # brew remove --force --ignore-dependencies --formula wget
       brew remove --force --ignore-dependencies --formula gettext
 
-    # - ls -l /usr/local/Cellar/python@3.12 || true
-    # - ls -l /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 || true
-    # - which python3.12 || true
-    # - which python || true
-    # - python -c 'print("hell world")' || true
-    # - /usr/local/Cellar/python@3.12/3.12.6/bin/python3.12 -c 'print("hell world")' || true
-    # - export PATH="/usr/local/Cellar/python@3.12/3.12.6/bin:$PATH"
-    # - which python || true
-    # - which python3 || true
-    # - which python3.12 || true
-    # - python -c 'print("hell world")' || true
-    - ls /usr/local/opt/python@3.12.6/libexec/bin || true
-    - export PATH="/usr/local/opt/python@3.12.6/libexec/bin:$PATH"
+    # - ls /usr/local/opt/python@3.12.6/libexec/bin || true
+    # - export PATH="/usr/local/opt/python@3.12.6/libexec/bin:$PATH"
     - which python3 || true
     - python3 --help || true
     - exit
