--- a/.gitlab/common/macos.yml
+++ b/.gitlab/common/macos.yml
@@ -47,17 +47,13 @@
     # Selecting the current Python version
     # TODO A
     # - !reference [.select_python_env_commands]
-    - python3 -m pip install venv
-    - venv .venv
+    - python3 -m venv .venv
     - source .venv/bin/activate
     # List Python and Go existing environments and their disk space
     - !reference [.list_go_versions_commands]
-    - !reference [.list_python_versions_commands]
+    # - !reference [.list_python_versions_commands]
     # Installing the job dependencies
-    # Python 3.12 changes default behavior how packages are installed.
-    # In particular, --break-system-packages command line option is
-    # required to use the old behavior or use a virtual env. https://github.com/actions/runner-images/issues/8615
-    - python3 -m pip install -r requirements.txt -r tasks/libs/requirements-github.txt --break-system-packages
+    - python3 -m pip install -r requirements.txt -r tasks/libs/requirements-github.txt
     # TODO A: - pyenv rehash
     - inv -e rtloader.make
     - inv -e rtloader.install
