--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -228,20 +228,6 @@ new-agent_dmg-x64-a7:
       echo After git install
       debug
 
-    # # Try builder
-    # - brew list --formula
-    # - |
-    #   export OPENSSL_VERSION=1.1
-    #   echo 'Installing cryptography...'
-    #   # brew uninstall awscli cryptography -fv
-    #   brew reinstall cryptography -fv
-    #   echo 'Installing openssl...'
-    #   brew install DataDog/datadog-agent-macos-build/openssl@$OPENSSL_VERSION -fv
-    #   brew link --overwrite openssl@$OPENSSL_VERSION
-    # - exit
-    # - bash .gitlab/package_build/builder_setup.sh
-    # - exit
-
     # # Setup builder
     # - |
     #   for dependency in $(brew list --formula); do
@@ -287,32 +273,8 @@ new-agent_dmg-x64-a7:
       export GO_VERSION="$(cat .go-version)"
       eval "$(gimme $GO_VERSION)"
     - . ~/.build_setup
-    # - export AGENT_DIR="$GOPATH/src/github.com/DataDog/datadog-agent"
-    # # Clone agent
-    # - rm -rf "$AGENT_DIR" && mkdir -p "$AGENT_DIR"
-    # # TODO: Proper way
-    # - cp -r ./* "$AGENT_DIR"
     # TODO: xcode 14.2?
     # - xcode-select -s /Applications/Xcode_14.3.1.app
-    # TODO: # Remove preinstalled environment
-    # -  |
-    #    # The base box ships a few things that can have unwanted effects on the MacOS build.
-    #     # For instance, we compile Python in the pipeline. If Python finds some libraries while
-    #     # it's being compiled, then it will add a dynamic link to them and add some features.
-    #     # In this particular case, Python sees that there is libintl.8.dylib (provided by the gettext brew package)
-    #     # in the default include path, thus links to it. However, that's not something we need, so we don't actually
-    #     # ship that library in the MacOS package. Since we have a feature to make a build fail if we depend on
-    #     # something we don't ship, this made the build fail (see: https://github.com/DataDog/datadog-agent-macos-build/runs/1011733463?check_suite_focus=true).
-
-    #     # In order to avoid such cases in the future where we use things we didn't expect to, we'd rather
-    #     # start with a "clean" runner with the bare minimum, and only install the brew packages we require.
-    #     brew remove --force --ignore-dependencies $(brew list --formula)
-
-    #     # Also completely remove the ruby env, otherwise some files remain after the formula uninstall,
-    #     # possibly causing gem version mismatch issues (eg. bundler).
-    #     rm -rf /usr/local/lib/ruby
-    #     # Remove existing Python installation as it may otherwise interfere
-    #     sudo rm -rf /Library/Frameworks/Python.framework/Versions/*
     # TODO: Cache brew deps
     # TODO: Cache _omnibus_cache_key
     # TODO: Verify runner - bash .gitlab/package_build/builder_setup.sh
@@ -352,3 +314,4 @@ new-agent_dmg-x64-a7:
     # - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
     # - export VERSION_CACHE_CONTENT=$(cat agent-version.cache | base64 -)
     # - python3 -m pip install -r tasks/libs/requirements-github.txt
+    - echo Done
