--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -143,7 +143,7 @@ agent_dmg-x64-a7:
 
 new-agent_dmg-x64-a7:
   stage: package_build
-  extends: .macos_gitlab
+  # extends: .macos_gitlab
   tags: ["macos:ventura-amd64-test", "specific:true"]
   # tags: ["macos:ventura-arm64-test", "specific:true"] # TODO
   needs: []
@@ -157,6 +157,20 @@ new-agent_dmg-x64-a7:
     - brew install gettext -fv || true
     - brew link --overwrite gettext || true
   script:
+    - brew remove --force --ignore-dependencies --formula gettext
+    - echo 'Trying to build python from source now without gettext, install it somewhere else and update path'
+    - echo Verifying libintl
+    - sudo find /usr -name "libintl*" || true
+    - sudo find /opt -name "libintl*" || true
+    - brew install --build-from-source DataDog/datadog-agent-macos-build/python@$PYTHON_VERSION -f
+    - brew link python@$PYTHON_VERSION -n || true
+    - Installed python
+    - echo Verifying libintl
+    - sudo find /usr -name "libintl*" || true
+    - sudo find /opt -name "libintl*" || true
+    - exit
+
+
     # TODO: Useful?
     - which python3 || true
     - source .venv/bin/activate
