--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,45 @@
 ---
 include:
-  - .gitlab/.pre/include.yml
-  - .gitlab/benchmarks/include.yml
-  - .gitlab/binary_build/include.yml
-  - .gitlab/check_deploy/check_deploy.yml
-  - .gitlab/check_merge/do_not_merge.yml
-  - .gitlab/choco_build/choco_build.yml
-  - .gitlab/common/shared.yml
-  - .gitlab/common/skip_ci_check.yml
-  - .gitlab/common/test_infra_version.yml
-  - .gitlab/container_build/include.yml
-  - .gitlab/container_scan/container_scan.yml
-  - .gitlab/deploy_containers/deploy_containers.yml
-  - .gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
-  - .gitlab/deploy_dca/deploy_dca.yml
-  - .gitlab/deploy_packages/include.yml
-  - .gitlab/deps_build/deps_build.yml
-  - .gitlab/deps_fetch/deps_fetch.yml
-  - .gitlab/dev_container_deploy/include.yml
-  - .gitlab/e2e/e2e.yml
-  - .gitlab/e2e_install_packages/include.yml
-  - .gitlab/e2e_pre_test/e2e_pre_test.yml
-  - .gitlab/e2e_testing_deploy/e2e_deploy.yml
-  - .gitlab/functional_test/include.yml
-  - .gitlab/install_script_testing/install_script_testing.yml
-  - .gitlab/integration_test/include.yml
-  - .gitlab/internal_image_deploy/internal_image_deploy.yml
-  - .gitlab/internal_kubernetes_deploy/include.yml
-  - .gitlab/lint/include.yml
-  - .gitlab/maintenance_jobs/include.yml
-  - .gitlab/notify/notify.yml
-  - .gitlab/package_build/include.yml
-  - .gitlab/packaging/include.yml
-  - .gitlab/package_deps_build/package_deps_build.yml
-  - .gitlab/pkg_metrics/pkg_metrics.yml
-  - .gitlab/post_rc_build/post_rc_tasks.yml
-  - .gitlab/setup/setup.yml
-  - .gitlab/source_test/include.yml
-  - .gitlab/trigger_release/trigger_release.yml
+  # - .gitlab/.pre/include.yml
+  # - .gitlab/benchmarks/include.yml
+  # - .gitlab/binary_build/include.yml
+  # - .gitlab/check_deploy/check_deploy.yml
+  # - .gitlab/check_merge/do_not_merge.yml
+  # - .gitlab/choco_build/choco_build.yml
+  # - .gitlab/common/shared.yml
+  # - .gitlab/common/skip_ci_check.yml
+  # - .gitlab/common/test_infra_version.yml
+  # - .gitlab/container_build/include.yml
+  # - .gitlab/container_scan/container_scan.yml
+  # - .gitlab/deploy_containers/deploy_containers.yml
+  # - .gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
+  # - .gitlab/deploy_dca/deploy_dca.yml
+  # - .gitlab/deploy_packages/include.yml
+  # - .gitlab/deps_build/deps_build.yml
+  # - .gitlab/deps_fetch/deps_fetch.yml
+  # - .gitlab/dev_container_deploy/include.yml
+  # - .gitlab/e2e/e2e.yml
+  # - .gitlab/e2e_install_packages/include.yml
+  # - .gitlab/e2e_pre_test/e2e_pre_test.yml
+  # - .gitlab/e2e_testing_deploy/e2e_deploy.yml
+  # - .gitlab/functional_test/include.yml
+  # - .gitlab/install_script_testing/install_script_testing.yml
+  # - .gitlab/integration_test/include.yml
+  # - .gitlab/internal_image_deploy/internal_image_deploy.yml
+  # - .gitlab/internal_kubernetes_deploy/include.yml
+  # - .gitlab/lint/include.yml
+  # - .gitlab/maintenance_jobs/include.yml
+  # - .gitlab/notify/notify.yml
+  # - .gitlab/package_build/include.yml
+  # - .gitlab/packaging/include.yml
+  # - .gitlab/package_deps_build/package_deps_build.yml
+  # - .gitlab/pkg_metrics/pkg_metrics.yml
+  # - .gitlab/post_rc_build/post_rc_tasks.yml
+  # - .gitlab/setup/setup.yml
+  # - .gitlab/source_test/include.yml
+  # - .gitlab/trigger_release/trigger_release.yml
+  - .gitlab/package_build/macos.yml
+  - .gitlab/package_build/dmg.yml
 
 default:
   retry:
@@ -55,52 +57,53 @@ default:
       - data_integrity_failure
 
 stages:
-  - .pre
-  - setup
-  - maintenance_jobs
-  - deps_build
-  - deps_fetch
-  - lint
-  - source_test
-  - source_test_stats
-  - software_composition_analysis
-  - binary_build
-  - package_deps_build
-  - kernel_matrix_testing_prepare
-  - kernel_matrix_testing_system_probe
-  - kernel_matrix_testing_security_agent
-  - kernel_matrix_testing_cleanup
-  - integration_test
-  - benchmarks
   - package_build
-  - packaging
-  - pkg_metrics
-  - container_build
-  - container_scan
-  - check_deploy
-  - dev_container_deploy
-  - deploy_containers
-  - deploy_packages
-  - deploy_cws_instrumentation
-  - deploy_dca
-  - choco_build
-  - trigger_release
-  - install_script_deploy
-  - internal_image_deploy
-  - e2e_deploy
-  - install_script_testing
-  - e2e_pre_test
-  - e2e_init
-  - e2e
-  - e2e_cleanup
-  - e2e_k8s
-  - e2e_install_packages
-  - functional_test
-  - junit_upload
-  - internal_kubernetes_deploy
-  - post_rc_build
-  - check_merge
-  - notify
+  # - .pre
+  # - setup
+  # - maintenance_jobs
+  # - deps_build
+  # - deps_fetch
+  # - lint
+  # - source_test
+  # - source_test_stats
+  # - software_composition_analysis
+  # - binary_build
+  # - package_deps_build
+  # - kernel_matrix_testing_prepare
+  # - kernel_matrix_testing_system_probe
+  # - kernel_matrix_testing_security_agent
+  # - kernel_matrix_testing_cleanup
+  # - integration_test
+  # - benchmarks
+  # - package_build
+  # - packaging
+  # - pkg_metrics
+  # - container_build
+  # - container_scan
+  # - check_deploy
+  # - dev_container_deploy
+  # - deploy_containers
+  # - deploy_packages
+  # - deploy_cws_instrumentation
+  # - deploy_dca
+  # - choco_build
+  # - trigger_release
+  # - install_script_deploy
+  # - internal_image_deploy
+  # - e2e_deploy
+  # - install_script_testing
+  # - e2e_pre_test
+  # - e2e_init
+  # - e2e
+  # - e2e_cleanup
+  # - e2e_k8s
+  # - e2e_install_packages
+  # - functional_test
+  # - junit_upload
+  # - internal_kubernetes_deploy
+  # - post_rc_build
+  # - check_merge
+  # - notify
 
 variables:
   # Directory in which we execute the omnibus build.
