--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -1,37 +1,38 @@
 ---
-.agent_build_common_dmg:
-  script:
-    - echo "About to build for $RELEASE_VERSION"
-    # remove artifacts from previous pipelines that may come from the cache
-    - rm -rf $OMNIBUS_PACKAGE_DIR/*
-    - mkdir -p $OMNIBUS_PACKAGE_DIR
-    - !reference [.setup_macos_github_app]
-    - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
-    - export VERSION_CACHE_CONTENT=$(cat agent-version.cache | base64 -)
-    - python3 -m pip install -r tasks/libs/requirements-github.txt
-    - inv -e github.trigger-macos --workflow-type "build" --datadog-agent-ref "$CI_COMMIT_SHA" --release-version "$RELEASE_VERSION" --destination "$OMNIBUS_PACKAGE_DIR" --version-cache "$VERSION_CACHE_CONTENT" --integrations-core-ref "$INTEGRATIONS_CORE_VERSION"
-    - !reference [.upload_sbom_artifacts]
-  timeout: 3h # MacOS builds can take 1h~2h, increase the timeout to avoid timeout flakes
-  artifacts:
-    expire_in: 2 weeks
-    paths:
-      - $OMNIBUS_PACKAGE_DIR
+# .agent_build_common_dmg:
+#   script:
+#     - echo "About to build for $RELEASE_VERSION"
+#     # remove artifacts from previous pipelines that may come from the cache
+#     - rm -rf $OMNIBUS_PACKAGE_DIR/*
+#     - mkdir -p $OMNIBUS_PACKAGE_DIR
+#     - !reference [.setup_macos_github_app]
+#     - $S3_CP_CMD $S3_ARTIFACTS_URI/agent-version.cache .
+#     - export VERSION_CACHE_CONTENT=$(cat agent-version.cache | base64 -)
+#     - python3 -m pip install -r tasks/libs/requirements-github.txt
+#     - inv -e github.trigger-macos --workflow-type "build" --datadog-agent-ref "$CI_COMMIT_SHA" --release-version "$RELEASE_VERSION" --destination "$OMNIBUS_PACKAGE_DIR" --version-cache "$VERSION_CACHE_CONTENT" --integrations-core-ref "$INTEGRATIONS_CORE_VERSION"
+#     - !reference [.upload_sbom_artifacts]
+#   timeout: 3h # MacOS builds can take 1h~2h, increase the timeout to avoid timeout flakes
+#   artifacts:
+#     expire_in: 2 weeks
+#     paths:
+#       - $OMNIBUS_PACKAGE_DIR
 
-agent_dmg-x64-a7:
-  extends: .agent_build_common_dmg
-  rules:
-    - !reference [.on_macos_gui_change]
-    - !reference [.on_packaging_change]
-    - !reference [.on_main_or_release_branch]
-    - !reference [.on_all_builds]
-    - !reference [.manual]
-  stage: package_build
-  image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
-  tags: ["arch:amd64"]
-  needs: ["go_mod_tidy_check"]
-  timeout: 6h
-  before_script:
-    - export RELEASE_VERSION=$RELEASE_VERSION_7
+# agent_dmg-x64-a7:
+#   extends: .agent_build_common_dmg
+#   rules:
+#     - !reference [.on_macos_gui_change]
+#     - !reference [.on_packaging_change]
+#     - !reference [.on_main_or_release_branch]
+#     - !reference [.on_all_builds]
+#     - !reference [.manual]
+#   stage: package_build
+#   image: registry.ddbuild.io/ci/datadog-agent-buildimages/deb_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
+#   tags: ["arch:amd64"]
+#   needs: ["go_mod_tidy_check"]
+#   timeout: 6h
+#   before_script:
+#     - export RELEASE_VERSION=$RELEASE_VERSION_7
+# --- OLD ---
 
 # new-agent_dmg-x64-a7:
 #   stage: package_build
@@ -157,6 +158,7 @@ new-agent_dmg-x64-a7:
     - brew install gettext -fv || true
     - brew link --overwrite gettext || true
   script:
+    - export PYTHON_VERSION=3.12.6
     - brew remove --force --ignore-dependencies --formula gettext
     - echo 'Trying to build python from source now without gettext, install it somewhere else and update path'
     - echo Verifying libintl
