--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,13 @@
 ---
 include:
-  # - .gitlab/.pre/include.yml
+  - .gitlab/.pre/include.yml
   # - .gitlab/benchmarks/include.yml
   # - .gitlab/binary_build/include.yml
   # - .gitlab/check_deploy/check_deploy.yml
-  # - .gitlab/check_merge/do_not_merge.yml
+  - .gitlab/check_merge/do_not_merge.yml
   # - .gitlab/choco_build/choco_build.yml
-  # - .gitlab/common/shared.yml
-  # - .gitlab/common/skip_ci_check.yml
+  - .gitlab/common/shared.yml
+  - .gitlab/common/skip_ci_check.yml
   # - .gitlab/common/test_infra_version.yml
   # - .gitlab/container_build/include.yml
   # - .gitlab/container_scan/container_scan.yml
@@ -57,53 +57,52 @@ default:
       - data_integrity_failure
 
 stages:
+  - .pre
+  - setup
+  - maintenance_jobs
+  - deps_build
+  - deps_fetch
+  - lint
+  - source_test
+  - source_test_stats
+  - software_composition_analysis
+  - binary_build
+  - package_deps_build
+  - kernel_matrix_testing_prepare
+  - kernel_matrix_testing_system_probe
+  - kernel_matrix_testing_security_agent
+  - kernel_matrix_testing_cleanup
+  - integration_test
+  - benchmarks
   - package_build
-  # - .pre
-  # - setup
-  # - maintenance_jobs
-  # - deps_build
-  # - deps_fetch
-  # - lint
-  # - source_test
-  # - source_test_stats
-  # - software_composition_analysis
-  # - binary_build
-  # - package_deps_build
-  # - kernel_matrix_testing_prepare
-  # - kernel_matrix_testing_system_probe
-  # - kernel_matrix_testing_security_agent
-  # - kernel_matrix_testing_cleanup
-  # - integration_test
-  # - benchmarks
-  # - package_build
-  # - packaging
-  # - pkg_metrics
-  # - container_build
-  # - container_scan
-  # - check_deploy
-  # - dev_container_deploy
-  # - deploy_containers
-  # - deploy_packages
-  # - deploy_cws_instrumentation
-  # - deploy_dca
-  # - choco_build
-  # - trigger_release
-  # - install_script_deploy
-  # - internal_image_deploy
-  # - e2e_deploy
-  # - install_script_testing
-  # - e2e_pre_test
-  # - e2e_init
-  # - e2e
-  # - e2e_cleanup
-  # - e2e_k8s
-  # - e2e_install_packages
-  # - functional_test
-  # - junit_upload
-  # - internal_kubernetes_deploy
-  # - post_rc_build
-  # - check_merge
-  # - notify
+  - packaging
+  - pkg_metrics
+  - container_build
+  - container_scan
+  - check_deploy
+  - dev_container_deploy
+  - deploy_containers
+  - deploy_packages
+  - deploy_cws_instrumentation
+  - deploy_dca
+  - choco_build
+  - trigger_release
+  - install_script_deploy
+  - internal_image_deploy
+  - e2e_deploy
+  - install_script_testing
+  - e2e_pre_test
+  - e2e_init
+  - e2e
+  - e2e_cleanup
+  - e2e_k8s
+  - e2e_install_packages
+  - functional_test
+  - junit_upload
+  - internal_kubernetes_deploy
+  - post_rc_build
+  - check_merge
+  - notify
 
 variables:
   # Directory in which we execute the omnibus build.
