--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,43 @@
 ---
 include:
   - .gitlab/.pre/include.yml
-  # - .gitlab/benchmarks/include.yml
-  # - .gitlab/binary_build/include.yml
-  # - .gitlab/check_deploy/check_deploy.yml
+  - .gitlab/benchmarks/include.yml
+  - .gitlab/binary_build/include.yml
+  - .gitlab/check_deploy/check_deploy.yml
   - .gitlab/check_merge/do_not_merge.yml
-  # - .gitlab/choco_build/choco_build.yml
+  - .gitlab/choco_build/choco_build.yml
   - .gitlab/common/shared.yml
   - .gitlab/common/skip_ci_check.yml
-  # - .gitlab/common/test_infra_version.yml
-  # - .gitlab/container_build/include.yml
-  # - .gitlab/container_scan/container_scan.yml
-  # - .gitlab/deploy_containers/deploy_containers.yml
-  # - .gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
-  # - .gitlab/deploy_dca/deploy_dca.yml
-  # - .gitlab/deploy_packages/include.yml
-  # - .gitlab/deps_build/deps_build.yml
-  # - .gitlab/deps_fetch/deps_fetch.yml
-  # - .gitlab/dev_container_deploy/include.yml
-  # - .gitlab/e2e/e2e.yml
-  # - .gitlab/e2e_install_packages/include.yml
-  # - .gitlab/e2e_pre_test/e2e_pre_test.yml
-  # - .gitlab/e2e_testing_deploy/e2e_deploy.yml
-  # - .gitlab/functional_test/include.yml
-  # - .gitlab/install_script_testing/install_script_testing.yml
-  # - .gitlab/integration_test/include.yml
-  # - .gitlab/internal_image_deploy/internal_image_deploy.yml
-  # - .gitlab/internal_kubernetes_deploy/include.yml
-  # - .gitlab/lint/include.yml
-  # - .gitlab/maintenance_jobs/include.yml
-  # - .gitlab/notify/notify.yml
-  # - .gitlab/package_build/include.yml
-  # - .gitlab/packaging/include.yml
-  # - .gitlab/package_deps_build/package_deps_build.yml
-  # - .gitlab/pkg_metrics/pkg_metrics.yml
-  # - .gitlab/post_rc_build/post_rc_tasks.yml
-  # - .gitlab/setup/setup.yml
-  # - .gitlab/source_test/include.yml
-  # - .gitlab/trigger_release/trigger_release.yml
-  - .gitlab/package_build/macos.yml
-  - .gitlab/package_build/dmg.yml
+  - .gitlab/common/test_infra_version.yml
+  - .gitlab/container_build/include.yml
+  - .gitlab/container_scan/container_scan.yml
+  - .gitlab/deploy_containers/deploy_containers.yml
+  - .gitlab/deploy_cws_instrumentation/deploy_cws_instrumentation.yml
+  - .gitlab/deploy_dca/deploy_dca.yml
+  - .gitlab/deploy_packages/include.yml
+  - .gitlab/deps_build/deps_build.yml
+  - .gitlab/deps_fetch/deps_fetch.yml
+  - .gitlab/dev_container_deploy/include.yml
+  - .gitlab/e2e/e2e.yml
+  - .gitlab/e2e_install_packages/include.yml
+  - .gitlab/e2e_pre_test/e2e_pre_test.yml
+  - .gitlab/e2e_testing_deploy/e2e_deploy.yml
+  - .gitlab/functional_test/include.yml
+  - .gitlab/install_script_testing/install_script_testing.yml
+  - .gitlab/integration_test/include.yml
+  - .gitlab/internal_image_deploy/internal_image_deploy.yml
+  - .gitlab/internal_kubernetes_deploy/include.yml
+  - .gitlab/lint/include.yml
+  - .gitlab/maintenance_jobs/include.yml
+  - .gitlab/notify/notify.yml
+  - .gitlab/package_build/include.yml
+  - .gitlab/packaging/include.yml
+  - .gitlab/package_deps_build/package_deps_build.yml
+  - .gitlab/pkg_metrics/pkg_metrics.yml
+  - .gitlab/post_rc_build/post_rc_tasks.yml
+  - .gitlab/setup/setup.yml
+  - .gitlab/source_test/include.yml
+  - .gitlab/trigger_release/trigger_release.yml
 
 default:
   retry:
