--- a/.gitlab/common/container_publish_job_templates.yml
+++ b/.gitlab/common/container_publish_job_templates.yml
@@ -4,6 +4,7 @@
   SRC_DSD: registry.ddbuild.io/ci/datadog-agent/dogstatsd
   SRC_DCA: registry.ddbuild.io/ci/datadog-agent/cluster-agent
   SRC_CWS_INSTRUMENTATION: registry.ddbuild.io/ci/datadog-agent/cws-instrumentation
+  SRC_OTEL_AGENT: registry.ddbuild.io/ci/datadog-agent/otel-agent
 
 .docker_publish_job_definition:
   image: registry.ddbuild.io/ci/datadog-agent-buildimages/docker_x64$DATADOG_AGENT_BUILDIMAGES_SUFFIX:$DATADOG_AGENT_BUILDIMAGES
