--- a/.gitlab/package_build/dmg.yml
+++ b/.gitlab/package_build/dmg.yml
@@ -143,7 +143,7 @@ agent_dmg-x64-a7:
 
 new-agent_dmg-x64-a7:
   stage: package_build
-  extends: .macos_gitlab
+  # extends: .macos_gitlab
   tags: ["macos:ventura-amd64-test", "specific:true"]
   # tags: ["macos:ventura-arm64-test", "specific:true"] # TODO
   needs: []
@@ -153,11 +153,14 @@ new-agent_dmg-x64-a7:
     paths:
       # - $OMNIBUS_PACKAGE_DIR
       - /tmp/celian
-  after_script:
-    - brew install gettext -fv || true
-    - brew link --overwrite gettext || true
-    - python3 --version || ( brew remove --force --ignore-dependencies python@3.12.6 && brew install python@3.12.6 --force ) || true
+  # after_script:
+  #   - brew install gettext -fv || true
+  #   - brew link --overwrite gettext || true
+  #   - python3 --version || ( brew remove --force --ignore-dependencies python@3.12.6 && brew install python@3.12.6 --force ) || true
   script:
+    - python3 --version
+    - ls -l "$(which python3)"
+    - exit
     - export PYTHON_VERSION=3.12.6
     - which python
     - brew remove --force --ignore-dependencies --formula gettext
