feat(slack): Update channels

--- a/tasks/libs/pipeline/github_slack_review_map.yaml
+++ b/tasks/libs/pipeline/github_slack_review_map.yaml
@@ -24,6 +24,7 @@
 '@datadog/container-app': '#container-app'
 '@datadog/metrics-aggregation': '#metrics-aggregation'
 '@datadog/serverless': '#serverless-agent'
+'@datadog/serverless-aws': '#serverless-aws'
 '@datadog/remote-config': '#remote-config-monitoring'
 '@datadog/fleet': '#fleet-automation-monitoring'
 '@datadog/agent-all': '#datadog-agent-pipelines'
@@ -32,7 +33,7 @@
 '@datadog/universal-service-monitoring': '#universal-service-monitoring'
 '@datadog/windows-agent': '#windows-agent-reviews'
 '@datadog/windows-kernel-integrations': '#windows-kernel-integrations-reviews'
-'@datadog/opentelemetry': '#opentelemetry'
+'@datadog/opentelemetry': '#opentelemetry-ops'
 '@datadog/opentelemetry-agent': '#opentelemetry-agent'
 '@datadog/agent-e2e-testing': '#agent-e2e-framework-help'
 '@datadog/sdlc-security': '#sit'
