--- a/modules.yml
+++ b/modules.yml
@@ -161,7 +161,8 @@ modules:
     used_by_otel: true
   pkg/errors: default
   pkg/fips: default
-  pkg/fleet/installer: default
+  pkg/fleet/installer:
+    should_replace_internal_modules: false # This module is self-contained and should stay that way
   pkg/gohai: default
   pkg/linters/components/pkgconfigusage:
     independent: false
