--- a/modules.yml
+++ b/modules.yml
@@ -164,7 +164,7 @@ modules:
   pkg/errors: default
   pkg/fips: default
   pkg/fleet/installer:
-    should_replace_internal_modules: false # This module is self-contained and should stay that way
+    should_replace_internal_modules: false
   pkg/gohai: default
   pkg/linters/components/pkgconfigusage:
     independent: false
