--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -169,8 +169,8 @@ variables:
   # Build images versions
   # To use images from datadog-agent-buildimages dev branches, set the corresponding
   # SUFFIX variable to _test_only
-  DATADOG_AGENT_BUILDIMAGES_SUFFIX: ""
-  DATADOG_AGENT_BUILDIMAGES: v54604211-ddd886d5
+  DATADOG_AGENT_BUILDIMAGES_SUFFIX: "_test_only"
+  DATADOG_AGENT_BUILDIMAGES: v56125345-ecff35ad
   DATADOG_AGENT_WINBUILDIMAGES_SUFFIX: ""
   DATADOG_AGENT_WINBUILDIMAGES: v54604211-ddd886d5
   DATADOG_AGENT_ARMBUILDIMAGES_SUFFIX: ""
