--- a/.gitlab/packaging/deb.yml
+++ b/.gitlab/packaging/deb.yml
@@ -73,10 +73,13 @@ agent_deb-arm64-a7-fips:
 
 .package_ot_deb_common:
   extends: [.package_deb_common]
+  variables:
+    # Not setting any required files for ddot packages yet
+    PACKAGE_REQUIRED_FILES_LIST: ""
   script:
     - !reference [.cache_omnibus_ruby_deps, setup]
     - !reference [.setup_deb_signing_key]
-    - dda inv -- -e omnibus.build --base-dir $OMNIBUS_BASE_DIR --skip-deps --target-project ${DD_PROJECT} --flavor ot ${OMNIBUS_EXTRA_ARGS}
+    - dda inv -- -e omnibus.build --base-dir $OMNIBUS_BASE_DIR --skip-deps --target-project otel-agent ${OMNIBUS_EXTRA_ARGS}
     - !reference [.create_signature_and_lint_linux_packages]
 
 ot_agent_deb-x64-a7:
@@ -84,7 +87,7 @@ ot_agent_deb-x64-a7:
   rules:
     - !reference [.except_mergequeue]
     - when: on_success
-  needs: ["datadog-agent-7-x64", "datadog-otel-agent-x64"]
+  needs: ["datadog-otel-agent-x64"]
   variables:
     DD_PROJECT: "agent"
 
@@ -93,7 +96,7 @@ ot_agent_deb-arm64-a7:
   rules:
     - !reference [.except_mergequeue]
     - when: on_success
-  needs: ["datadog-agent-7-arm64", "datadog-otel-agent-arm64"]
+  needs: ["datadog-otel-agent-arm64"]
   variables:
     DD_PROJECT: "agent"
 
