bazel: update libffi to 3.4.8

--- a/deps/libffi/BUILD.bazel
+++ b/deps/libffi/BUILD.bazel
@@ -5,14 +5,14 @@ configure_make(
     configure_options = [
         "--disable-doc",
         "--disable-static",
+        "--disable-multi-os-directory",
     ],
     lib_source = "@libffi//:all",
-    out_lib_dir = "lib64",
     out_shared_libs = select({
         "@platforms//os:linux": [
             "libffi.so",
-            "libffi.so.6",
-            "libffi.so.6.0.4",
+            "libffi.so.8",
+            "libffi.so.8.1.4",
         ],
     }),
     visibility = ["//visibility:public"],
