--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -118,6 +118,20 @@ agent_suse-arm64-a7-fips:
     OMNIBUS_EXTRA_ARGS: "--host-distribution=suse --flavor fips"
     DD_PROJECT: agent
 
+ot_agent_rpm-amd64:
+  extends: [.package_rpm_common, .package_rpm_x86]
+  needs: ["datadog-otel-agent-x64"]
+  variables:
+    DD_PROJECT: otel-agent
+    PACKAGE_REQUIRED_FILES_LIST: ""
+
+ot_agent_rpm-arm64:
+  extends: [.package_rpm_common, .package_rpm_arm64]
+  needs: ["datadog-otel-agent-arm64"]
+  variables:
+    DD_PROJECT: otel-agent
+    PACKAGE_REQUIRED_FILES_LIST: ""
+
 installer_rpm-arm64:
   extends: [.package_rpm_common, .package_rpm_arm64]
   needs: ["installer-arm64"]
