Add optional CI job to run tests using nodetreemodel
This reverts #37735, reenabling #37698

--- a/.gitlab/source_test/linux.yml
+++ b/.gitlab/source_test/linux.yml
@@ -61,6 +61,23 @@ tests_deb-x64-py3:
   variables:
     CONDA_ENV: ddpy3
 
+tests_nodetreemodel:
+  # Tests are currently not passing
+  # They are being fixed, and we want to track progress on this work
+  extends:
+    - .rtloader_tests
+    - .linux_tests
+    - .linux_x64
+  after_script:
+    # Don't upload junit results, which prevents e2e tests from running (they will fail)
+    - !reference [.upload_coverage]
+  image: registry.ddbuild.io/ci/datadog-agent-buildimages/rpm_x64$CI_IMAGE_RPM_X64_SUFFIX:$CI_IMAGE_RPM_X64
+  variables:
+    CONDA_ENV: ddpy3
+    # This env var enables the NTM config implementation
+    DD_CONF_NODETREEMODEL: enable
+  allow_failure: true
+
 tests_flavor_iot_deb-x64:
   extends:
     - .rtloader_tests
