--- a/.gitlab/common/test_infra_version.yml
+++ b/.gitlab/common/test_infra_version.yml
@@ -5,5 +5,5 @@
 
 ---
 variables:
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES: c9907d221ea5
-  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: ''
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES: 26b108ac229b
+  TEST_INFRA_DEFINITIONS_BUILDIMAGES_SUFFIX: -dev
