--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -598,7 +598,6 @@
 /pkg/snmp/                              @DataDog/ndm-core
 /pkg/tagger/                            @DataDog/container-platform
 /pkg/windowsdriver/                     @DataDog/windows-agent
-/comp/core/workloadmeta/collectors/internal/process  @DataDog/container-experiences
 /comp/core/workloadmeta/collectors/internal/cloudfoundry  @DataDog/agent-integrations
 /comp/core/workloadmeta/collectors/internal/containerd    @DataDog/container-platform @DataDog/container-integrations
 /comp/core/workloadmeta/collectors/internal/crio          @DataDog/container-platform @DataDog/container-integrations
@@ -610,6 +609,7 @@
 /comp/core/workloadmeta/collectors/internal/kubemetadata  @DataDog/container-platform @DataDog/container-integrations
 /comp/core/workloadmeta/collectors/internal/nvml          @DataDog/ebpf-platform
 /comp/core/workloadmeta/collectors/internal/podman        @DataDog/container-platform @DataDog/container-integrations
+/comp/core/workloadmeta/collectors/internal/process       @DataDog/container-experiences @DataDog/container-platform
 /comp/core/tagger/collectors            @DataDog/container-platform @DataDog/container-integrations
 /pkg/sbom/                              @DataDog/agent-security @DataDog/container-integrations
 /pkg/networkpath/                       @DataDog/Networks
